# TermX

./: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts  setup-release.sh  worklog.md
.github/workflows/: build-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/fonts/: README.md
app/src/main/cpp/: CMakeLists.txt  termx_pty.c  termx_x11.c
app/src/main/java/com/termx/app/: MainActivity.kt  TermXApp.kt
app/src/main/java/com/termx/app/api/: AppInstallApi.kt  BatteryApi.kt  CameraApi.kt  ContactApi.kt  FilePickerApi.kt  FingerprintApi.kt  NfcApi.kt  NotificationApi.kt  ScreenshotApi.kt  SmsApi.kt  SttApi.kt  TermXApi.kt  TermXApiReceiver.kt
app/src/main/java/com/termx/app/config/: BellHandler.kt  ConfigDirectory.kt  TermXProperties.kt
app/src/main/java/com/termx/app/keyboard/: ExtraKeysView.kt
app/src/main/java/com/termx/app/location/: LocationProvider.kt
app/src/main/java/com/termx/app/media/: MediaManager.kt
app/src/main/java/com/termx/app/pkg/: BootstrapInstaller.kt  PackageInfo.kt  Repository.kt  TermXPackageManager.kt
app/src/main/java/com/termx/app/power/: BluetoothApi.kt  CallLogApi.kt  EncryptionApi.kt  (+14 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  terminal_bg.xml
app/src/main/res/layout/: activity_main.xml  item_session_tab.xml  widget_terminal.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml  widget_info.xml
(+47 files in other folders)
